# tweet-scraper

./: .gitignore  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: pr-review-and-notify.yml
tweet_harvest/: cli.py  constants.py  crawler.py  models.py
tweet_harvest/features/: backoff.py  network.py
tweet_harvest/helpers/: page_helpers.py
tweets-data/: from_elonmusk_2025-08-07_02-41-59.csv  makan_malam_2025-08-07_02-24-32.csv  makan_malam_2025-08-07_02-26-25.csv  timnas_2025-08-07_02-43-36.csv
